<resources>
    <string name="app_name" translatable="false">AlpiniaTech</string>

    <string name="title_home" translatable="false">Home</string>
    <string name="description_home" translatable="false">Tap to see rooms inside</string>
    <string name="description_room" translatable="false">Tap to see devices inside</string>
    <string name="no_homes" translatable="false">You do not have homes registered</string>
    <string name="no_devices" translatable="false">You do not have devices associated with this room </string>
    <string name="title_dashboard">Routines</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_routines">Routines</string>
    <string name="title_rooms">Rooms</string>
    <string name="title_devices">Devices</string>
	<string name="action_settings">Settings</string>

    <string name="overflow_refresh">Refresh</string>
    <string name="overflow_settings">Settings</string>

    <string name="settings_notifications">Notifications</string>
    <string name="settings_IPAddress">IP Address</string>

    <string name="status_on" translatable="false">On</string>
    <string name="status_off" translatable="false">Off</string>
    <string name="status_open">Open</string>
    <string name="status_close">Close</string>
    <string name="status_opening">Opening</string>
    <string name="status_closing">Closing</string>

    <string name="status_locked">Locked</string>
    <string name="status_unlocked">Unlocked</string>

    <string name="create_room">Create room</string>
    <string name="modify_room">Update room</string>
    <string name="delete_room">Delete room</string>
    <string name="get_room">Get room</string>
    <string name="get_rooms">Get rooms</string>
    <string name="result">Result: %1$s</string>


    <!-- Light -->
    <string name="light_title">Lights</string>
    <string name="ligth_brightness">Brightness</string>

    <!-- Door -->
    <string name="door_title">DOOR</string>
    <string name="door_open">Open</string>
    <string name="door_close">Close</string>
    <string name="door_lock">Locked</string>
    <string name="door_unlock">Unlocked</string>

    <!-- Faucet -->
    <string name="faucet_title">Faucet</string>
    <string name="faucet_open">Open</string>
    <string name="faucet_close">Close</string>
    <string-array name="units">
        <item>ml</item>
        <item>cl</item>
        <item>dl</item>
        <item>l</item>
        <item>dal</item>
        <item>hl</item>
        <item>kl</item>
    </string-array>
    <string name="start_dispensing" translatable="false">Start</string>
    <string name = "started_dispensing">Dispensing started!</string>
    <string name="cancel_dispensing">Cancel</string>
    <string name="dispense_exactly">Dispense automatically</string>
    <string name="stop_dispensing">Stop Dispensing</string>
    <string name ="error_dispensing">The number must be between 1 and 100!</string>


    <!-- Parlante -->
    <string name="status_playing">Playing</string>
    <string name="status_paused">Paused</string>
    <string name="status_previous">Previous song</string>
    <string name="status_next">Next song</string>
    <string-array name="genres">
        <item>Clasica</item>
        <item>Country</item>
        <item>Dance</item>
        <item>Latina</item>
        <item>Pop</item>
        <item>Rock</item>
    </string-array>


    <!-- Heladera -->
    <string name="refrigerator_title">Refrigerator</string>
    <string name="refrigerator_mode">Mode</string>
    <string-array name="refrigerator_mode_options">
        <item>Default</item>
        <item>Vacation</item>
        <item>Party</item>
    </string-array>


    <string-array name="modes">
        <item>vacuum</item>
        <item>mop</item>
    </string-array>

    <string name="fridge_temperature">Fridge\nTemperature</string>
    <string-array name="fridge_temperature_options">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>

    <string name="freezer_temperature">Freezer\nTemperature</string>
    <string-array name="freezer_temperature_options">
        <item>-20</item>
        <item>-19</item>
        <item>-18</item>
        <item>-17</item>
        <item>-16</item>
        <item>-15</item>
        <item>-14</item>
        <item>-13</item>
        <item>-12</item>
        <item>-11</item>
        <item>-10</item>
        <item>-9</item>
        <item>-8</item>
    </string-array>


    <!-- Aire Acondicionado -->
    <string name="ac_title">Air Conditioner</string>
    <string name="ac_mode">Mode</string>
    <string-array name="ac_mode_options">
        <item>Ventilation</item>
        <item>Cold</item>
        <item>Hot</item>
    </string-array>

    <string name="ac_temperature">Temperature</string>
    <string-array name="ac_temperature_options">
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
    </string-array>

    <string name="ac_vertical">Vertical\nSwings</string>
    <string-array name="ac_vertical_options">
         <item>Default</item>
        <item>22</item>
        <item>45</item>
        <item>67</item>
        <item>90</item>
    </string-array>

    <string name="ac_horizontal">Horizontal\nSwings</string>
    <string-array name="ac_horizontal_options">
        <item>Default</item>
        <item>-90</item>
        <item>-45</item>
        <item>0</item>
        <item>45</item>
        <item>90</item>
    </string-array>

    <string name="ac_speed">Speed\nPercentage</string>
    <string-array name="ac_speed">
       <item>Default</item>
        <item>25</item>
        <item>50</item>
        <item>75</item>
        <item>100</item>
    </string-array>

    <string-array name="device_types">
        <item>Lights</item>
        <item>Vacuum</item>
        <item>Speaker</item>
        <item>Fridge</item>
        <item>Air Conditioner</item>
        <item>Faucet</item>
        <item>Door</item>
    </string-array>




    <string name="no_results">You don\'t have any homes</string>
    <string name="color_picker"> Open color picker</string>
    <string name="dock_vacuum">Dock vacuum</string>
    <string name="faucet_start">Dispense</string>
    <!-- Manejo de errores -->
    <string name="error_message">Something went wrong: %1$s [%2$d]</string>
    <string name="room_activity">Devices</string>
    <string name="settings_IPAddress_active">Currently connected to: </string>
    <string name="settings_IPAddress_button">Connect</string>
    <string name="toast_createRoom">Creating room</string>
    <string name="toast_Refresh">Refresh</string>
    <string name="toast_Settings">Settings</string>
    <string name="toast_IPAddress">IP address changed</string>
    <string name="toast_createHome">Creating home</string>
    <string name="toast_ConnectionProblems">Connection problems</string>
    <string name="newHome">New home</string>
    <string name="addButton">Add</string>
    <string name="newRoom">New room</string>
    <string name="toast_IPAddressMissing">Invalid IP address</string>
    <string name="doorDialog">Door</string>
    <string name="SpeakerDialog">Speaker</string>
    <string name="VacuumDialog">Vacuum</string>
    <string name="description_device">Tap to edit device</string>
    <string name="alertwarn">Are you sure you want to delete this item?</string>
    <string name="AirConditionerDialog">Air conditioner</string>
    <string name="door_locked_notification">Door locked</string>
    <string name="door_unlocked_notification">Door unlocked</string>
    <string name="lights_on_notification">Lights on</string>
    <string name="lights_off_notification">Lights off</string>
    <string name="speaker_playing_notification">Playing</string>
    <string name="air_conditioner_notification">Air conditioner on</string>
    <string name="settings_Notifications_button">Manage</string>
    <string name="channelLights_name">Lights notifications</string>
    <string name="channelLights_description">Manage on/off notifications</string>
    <string name="channelDoor_name">Door notifications</string>
    <string name="channelDoor_description">Manage lock/unlock notifications</string>
    <string name="channelAirConditioner_description">Manage temperature notifications</string>
    <string name="channelAirConditioner_name">Air conditioner notifications</string>
    <string name="channelSpeaker_description">Manage speaker notifications</string>
    <string name="channelSpeaker_name">Speaker notifications</string>
    <string name="no_rooms">You do not have any room registered in this home</string>
    <string name="tap_devices">Tap to see rooms</string>
    <string name="set_mode">Set mode</string>
    <string name="volume">Volume</string>
    <string name="by">by</string>
    <string name="device_name">Device name</string>
    <string name ="add_devicee">Add a new device</string>
    <string name="dtype">Device type</string>
    <string name="addd">Add</string>

</resources>