<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/settings_IPAddress"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="65dp"

        android:hint="@string/settings_IPAddress"
        android:textAlignment="textStart"

        android:textSize="24dp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="15dp"
        android:text="@string/settings_IPAddress_active"
        app:layout_constraintStart_toStartOf="@+id/settings_IPAddress"
        app:layout_constraintTop_toBottomOf="@+id/settings_IPAddress" />

    <TextView
        android:id="@+id/textViewIP"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="15dp"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        android:layout_marginLeft="10dp"
        app:layout_constraintTop_toBottomOf="@+id/settings_IPAddress" />

    <Button
        android:id="@+id/btnSaveChangesOnIP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="30dp"
        android:clickable="false"
        android:text="@string/settings_IPAddress_button"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/settings_notifications"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:text="@string/settings_notifications"
        android:textAlignment="textStart"
        android:textSize="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/btnSaveChangesOnNotifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="30dp"
        android:clickable="false"
        android:text="@string/settings_Notifications_button"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSaveChangesOnIP" />


</androidx.constraintlayout.widget.ConstraintLayout>