<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/homeList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/back1"
        app:layout_constraintBottom_toTopOf="@+id/newHome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <EditText
        android:id="@+id/newHome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/newHome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnAddHome"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnAddHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/no_homes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_homes"
        android:textSize="@dimen/text_empty_view"
        android:textColor="@color/title_text"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/newHome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/homeList"
        app:layout_constraintTop_toTopOf="@+id/homeList" />

</androidx.constraintlayout.widget.ConstraintLayout>