<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true">

    <TextView
        android:id="@+id/refrigerator_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/refrigerator_title"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp">

        <TextView
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/refrigerator_mode"
            android:textAlignment="textStart"
            android:textSize="20dp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/ref_mode"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_marginStart="80dp"
            android:layout_weight="1"
            android:background="#F3F3F3"
            android:entries="@array/refrigerator_mode_options" />

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp">

        <TextView
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/fridge_temperature"
            android:textAlignment="textStart"
            android:textSize="20dp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/ref_fridge_temp"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="24dp"
            android:layout_weight="1"
            android:background="#F3F3F3"
            android:entries="@array/fridge_temperature_options" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="138dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/freezer_temperature"
            android:textAlignment="textStart"
            android:textSize="20dp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/ref_freezer_temp"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="24dp"
            android:layout_weight="1"
            android:background="#F3F3F3"
            android:entries="@array/freezer_temperature_options" />

    </LinearLayout>


</LinearLayout>
