<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Spinner
        android:id="@+id/spin_horizontal_ac"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:entries="@array/ac_horizontal_options"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.834"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintVertical_bias="0.531" />

    <Spinner
        android:id="@+id/spin_speed_ac"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:entries="@array/ac_speed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.834"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintVertical_bias="0.679" />

    <TextView
        android:id="@+id/text_speed_ac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ac_speed"
        android:textColor="@color/title_text"
        android:textSize="@dimen/text_devices"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/spin_mode_ac"
        app:layout_constraintHorizontal_bias="0.435"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintVertical_bias="0.69" />

    <TextView
        android:id="@+id/text_horizontal_ac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ac_horizontal"
        android:textColor="@color/title_text"
        android:textSize="@dimen/text_devices"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/spin_mode_ac"
        app:layout_constraintHorizontal_bias="0.393"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintVertical_bias="0.53" />

    <Spinner
        android:id="@+id/spin_vertical_ac"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:entries="@array/ac_vertical_options"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.834"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintVertical_bias="0.38" />

    <Spinner
        android:id="@+id/spin_temperature_ac"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:entries="@array/ac_temperature_options"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.834"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintVertical_bias="0.238" />

    <TextView
        android:id="@+id/text_vertical_ac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ac_vertical"
        android:textColor="@color/title_text"
        android:textSize="@dimen/text_devices"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/spin_mode_ac"
        app:layout_constraintHorizontal_bias="0.313"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintVertical_bias="0.371" />

    <TextView
        android:id="@+id/ac_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ac_title"
        android:textColor="@color/title_text"
        android:textSize="@dimen/title_devices_name"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.098" />

    <TextView
        android:id="@+id/text_mode_ac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ac_mode"
        android:textColor="@color/title_text"
        android:textSize="@dimen/text_devices"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/spin_mode_ac"
        app:layout_constraintHorizontal_bias="0.278"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintVertical_bias="0.119" />

    <TextView
        android:id="@+id/text_temperature_ac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ac_temperature"
        android:textColor="@color/title_text"
        android:textSize="@dimen/text_devices"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/spin_mode_ac"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintVertical_bias="0.228" />

    <Spinner
        android:id="@+id/spin_mode_ac"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:entries="@array/ac_mode_options"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.834"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintVertical_bias="0.118" />

    <Switch
        android:id="@+id/open_close_ac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.124" />


</androidx.constraintlayout.widget.ConstraintLayout>